# REST-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  BROKEN CODE generator.json  CODE ANALYZE.json  README.md  docker-compose.yml  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy-k8s.yml
CPU-deploy for test/: README_CPU_DEPLOY.txt  docker-compose.yml  env.sample  mock_workers.py
api-request-gateway/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml
api-request-gateway/db/: models.py  session.py
api-request-gateway/db/migrations/: 001_schema.sql
api-request-gateway/gateway/: config.py  main.py
api-request-gateway/gateway/routers/: analyze.py  generate.py  pipeline.py  status.py  students.py
api-request-gateway/gateway/schemas/: request.py  response.py
api-request-gateway/gateway/services/: auth.py  cache.py  queue.py  student_profile.py  students.py  webhook.py
api-request-gateway/models/: broken_code_gen.py  code_analyze.py
api-request-gateway/tests/: test_cache_keys.py  test_cors.py  test_json_extract.py  test_queue_keys.py  test_score.py  test_student_profile.py  test_training_samples.py
api-request-gateway/workers/: analyze_worker.py  generate_worker.py  pipeline_worker.py  webhook_dispatcher.py
legacy/old-http-ml-architecture/: .env.example  README.md  docker-compose.yml  requirements.in
scripts/: extract_tag_scores.py
services/auth-service/: Dockerfile
services/code-analyze/: Dockerfile
(+129 files in other folders)
